# blog

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  serve.sh  tailwind.config.js
.github/workflows/: build.yml
blog/: __init__.py  admin.py  blog.py  db.py  jinja_utils.py  message_db.py  post_db.py  schema.sql  utils.py
blog/static/: main.css
blog/static/css/prism/: prism.css
blog/static/js/prism/: prism.js
blog/static/js/tinymce/themes/silver/: theme.min.js
blog/templates/: base.html
blog/templates/admin/: index.html  new_message.html
blog/templates/posts/: edit.html  index.html  show.html
tests/: conftest.py  data.sql  test_admin.py  test_blog.py  test_db.py
